doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\SADAR\Documents\Adnan_Computers
-d
C:\Users\SADAR\Documents\Adnan_Computers\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\SADAR\Documents\Adnan_Computers\Sum_of_digits.java
<---- end of javadoc command ---->
Loading source file C:\Users\SADAR\Documents\Adnan_Computers\Sum_of_digits.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_144
Building tree for all the packages and classes...
Generating C:\Users\SADAR\Documents\Adnan_Computers\doc\Sum_of_digits.html...
C:\Users\SADAR\Documents\Adnan_Computers\Stack_Pointer.java:9: error: '.class' expected
        Stackpointer(int nn)
                         ^
C:\Users\SADAR\Documents\Adnan_Computers\Stack_Pointer.java:9: error: ';' expected
        Stackpointer(int nn)
                           ^
C:\Users\SADAR\Documents\Adnan_Computers\Stack_Pointer.java:18: error: illegal start of expression
                void pushdata(int item)
                ^
C:\Users\SADAR\Documents\Adnan_Computers\Stack_Pointer.java:18: error: ';' expected
                void pushdata(int item)
                             ^
C:\Users\SADAR\Documents\Adnan_Computers\Stack_Pointer.java:18: error: ';' expected
                void pushdata(int item)
                                      ^
C:\Users\SADAR\Documents\Adnan_Computers\Stack_Pointer.java:30: error: illegal start of expression
            void popdata(int v)
            ^
C:\Users\SADAR\Documents\Adnan_Computers\Stack_Pointer.java:30: error: ';' expected
            void popdata(int v)
                        ^
C:\Users\SADAR\Documents\Adnan_Computers\Stack_Pointer.java:30: error: ';' expected
            void popdata(int v)
                              ^
C:\Users\SADAR\Documents\Adnan_Computers\Stack_Pointer.java:35: error: 'else' without 'if'
                else
                ^
C:\Users\SADAR\Documents\Adnan_Computers\Stack_Pointer.java:42: error: illegal start of expression
            void display()
            ^
C:\Users\SADAR\Documents\Adnan_Computers\Stack_Pointer.java:42: error: ';' expected
            void display()
                        ^
C:\Users\SADAR\Documents\Adnan_Computers\Stack_Pointer.java:56: error: reached end of file while parsing
}
 ^
C:\Users\SADAR\Documents\Adnan_Computers\Decoder2.java:6: error: reached end of file while parsing
        BufferedReader in = new BufferedReader(new InputStreamReader(System.in));
                                                                                 ^
C:\Users\SADAR\Documents\Adnan_Computers\arranging.java:6: error: reached end of file while parsing
BufferedReader br= new BufferedReader(new InputStreamReader(System.in));
                                                                        ^
Generating C:\Users\SADAR\Documents\Adnan_Computers\doc\package-frame.html...
Generating C:\Users\SADAR\Documents\Adnan_Computers\doc\package-summary.html...
Generating C:\Users\SADAR\Documents\Adnan_Computers\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\SADAR\Documents\Adnan_Computers\doc\allclasses-frame.html...
Generating C:\Users\SADAR\Documents\Adnan_Computers\doc\allclasses-noframe.html...
Generating C:\Users\SADAR\Documents\Adnan_Computers\doc\index.html...
14 errors
